--- a/course1/week2/vector/numpy_vectors.ipynb
+++ b/course1/week2/vector/numpy_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "swiss-knight",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "weird-antique",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "placed-station",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "great-access",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fabulous-affair",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "acquired-backing",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "swiss-presentation",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 8
     }
    ],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "mental-garbage",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 10
     }
    ],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 11
     }
    ],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,11 +201,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "dist1_1 = cdist(a, b, metric='cityblock')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[3.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "dist1_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1.73205081]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "cdist(a, b)"
    ]
   },
   {
@@ -217,51 +257,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[3.]])"
+       "array([[1.73205081]])"
       ]
      },
      "metadata": {},
      "execution_count": 17
-    }
-   ],
-   "source": [
-    "dist1_1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[1.73205081]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 20
-    }
-   ],
-   "source": [
-    "cdist(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[1.73205081]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
     }
    ],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 18
     }
    ],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 20
     }
    ],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 21
     }
    ],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -360,11 +360,82 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 22
     }
    ],
    "source": [
     "cdist(A, B, metric='cosine')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "np.dot(c, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0 1 2] [0 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.array((0, 1, 2))\n",
+    "d = np.array((0, 2, 4))\n",
+    "\n",
+    "print(c, d)\n",
+    "\n",
+    "cos_angle = np.dot(c, d) / (np.linalg.norm(c, ord=2) * np.linalg.norm(d, ord=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.9999999999999998"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "cos_angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cos_angle1 = cdist(c[np.newaxis, :], d[np.newaxis, :], metric='cosine')"
    ]
   },
   {
@@ -376,69 +447,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "12"
+       "array([[2.22044605e-16]])"
       ]
      },
      "metadata": {},
      "execution_count": 37
-    }
-   ],
-   "source": [
-    "np.dot(c, d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cos_angle = np.dot(c, d) / (np.linalg.norm(c, ord=2) * np.linalg.norm(d, ord=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.8894991799933215"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 57
-    }
-   ],
-   "source": [
-    "cos_angle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cos_angle1 = cdist(c[np.newaxis, :], d[np.newaxis, :], metric='cosine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[0.11050082]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 48
     }
    ],
    "source": [
@@ -447,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,18 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.11050082000667849"
+       "0.0"
       ]
      },
      "metadata": {},
-     "execution_count": 59
+     "execution_count": 39
     }
    ],
    "source": [
@@ -478,22 +491,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.8894991799933215"
+       "1.0"
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 40
     }
    ],
    "source": [
     "1 - cos_angle1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1.14562255e-01],\n",
+       "       [2.22044605e-16]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "cdist(A[1:], A[0], metric='cosine')"
    ]
   },
   {
