--- a/course1/week4/probability_theory/task2.ipynb
+++ b/course1/week4/probability_theory/task2.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "86597ef98d6b7ee010503556fda718cb767d1589d6545cfa27a501147824c498"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +64,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "source": [
@@ -81,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +88,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 5
     }
    ],
    "source": [
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +108,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 6
     }
    ],
    "source": [
@@ -121,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +128,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 7
     }
    ],
    "source": [
@@ -142,6 +138,66 @@
     "\n",
     "P_k = (np.math.factorial(10) / (np.math.factorial(k)*np.math.factorial(n - k))) * np.power(p, k) * np.power(1 - p, n - k)\n",
     "round(P_k, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.049787068367863944"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "np.exp(-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2220.26"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "round(1197.69 + np.sqrt(116182.2)*3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "29.78"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "round(np.sqrt(116182.2 / (2016-1885)), 2)"
    ]
   },
   {
